# advent_of_code_2021

./: .gitignore  AoC_2021.py  AoC_day01.py  AoC_day02.py  AoC_day03.py  AoC_day04.py  README.md  puzzleData - C++ Shortcut.lnk
AoC++/: AoC++.cpp  AoC++.h  AoC_day01.cpp  CMakeLists.txt  aocDay01.h  aocDay02.h  aocDayXX.h
C++/: test.cpp
C++/AoC_day01/: AoC_day01.cpp  AoC_day01.h  CMakeLists.txt
