# CMakeList.txt : CMake project for AoC_day01, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AoC_day01")

# Add source to this project's executable.
add_executable (AoC_day01 "AoC_day01.cpp" "AoC_day01.h")

# TODO: Add tests and install targets if needed.
